--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,10 @@ jobs:
     steps:
       - checkout
       - restore_gradle
-      - run: ./gradlew test build
+      - run: ./gradlew test jacocoTestReport build
+      - codecov/upload:
+          file: service/build/reports/jacoco/test/jacocoTestReport.xml
+          flags: service
       - run: |
           if [ "$CIRCLE_BRANCH" == "master" ]; then
             APPENDIX=""
