--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
             ./gradlew :code-hybrid-flow-sdk:publishSdkPublicationToSnapshotRepository
           fi
 
-workflow:
+workflows:
   version: 2.1
   dev:
     jobs:
