--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,6 @@ workflows:
           type: approval
           requires:
             - build
-      - publishSdk:
+      - publish_sdk:
           requires:
             - hold
