--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -2,4 +2,8 @@ FROM openjdk:8-jre-alpine3.9
 
 ADD build/libs/code-hybrid-flow-service-*-fat.jar code-hybrid-flow-service.jar
 
+RUN GRPC_HEALTH_PROBE_VERSION=v0.2.0 && \
+    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
+    chmod +x /bin/grpc_health_probe
+
 ENTRYPOINT ["java", "-jar", "-noverify", "code-hybrid-flow-service.jar"]
